# tag-highlight.nvim

./: .gitignore  .gitmodules  GNUmakefile  LICENSE  Makefile  README.md  build.bat  build.sh
.github/workflows/: codeql-analysis.yml
colors/: THLMolokai.vim
mpack_ct/: CMakeLists.txt  cmake-config.h.in
mpack_ct/src/: CMakeLists.txt  buf_data.c  constants.c  ctags.c  data.h  events.c  globals.c  highlight.h  json.c  linked_list.c  linked_list.h  macros.h  main.c  mpack.c  mpack.h  mpack_code.h  mpack_decode.c  mpack_encode.c  mpack_obj_decode.c  mpack_print.c  mpack_stream_decode.c  mytags.h  parse.c  tags.h  update.c  update_commands.c  util.c  util.h
mpack_ct/src/archive/: CMakeLists.txt  archive_util.h  archive_util_gzip.c  archive_util_xz.c  getlines.c  readfile.c  writefile.c
mpack_ct/src/bstring/: additions.c  b_list.c  b_stream.c  bstrlib.c  bstrlib.h  char_fields.c  never_use.c  private.h
mpack_ct/src/contrib/: CMakeLists.txt  bsd_funcs.c  bsd_funcs.h  contrib.h
mpack_ct/src/modified_neotags/: main.c  neotags.c  oldmain  strip.c  tok.c
plugin/: Tag-Highlight.vim  Tag-Highlight_Setup.vim  mytags.vim  setup.vim  shim.vim  thing.vim
plugin/MyTags/: c.vim  cpp.vim  go.vim  java.vim  javascript.vim  perl.vim  php.vim  python.vim  ruby.vim  rust.vim  sh.vim  vim.vim  zsh.vim
plugin/Tag-Highlight/: c.vim  cpp.vim  csharp.vim  go.vim  java.vim  javascript.vim  perl.vim  php.vim  python.vim  ruby.vim  rust.vim  sh.vim  vim.vim  zsh.vim
tag-highlight/: CMakeLists.txt  cmake-config.h.in
tag-highlight/cmake/: FindLibClang.cmake  FindLibEv.cmake  FindLibUV.cmake  FindPCRE2.cmake  Findsodium.cmake  get_compiler_include_paths.cmake
tag-highlight/src/: CMakeLists.txt  Common.h  buffer.c  ctags.c  data.c  event_handlers.c  event_loop.c  events.h  highlight.h  macros.h  main.c  message_autocmd.c  mingw_config.h  my_p99_common.h  update.c
tag-highlight/src/contrib/: contrib.c  contrib.h
tag-highlight/src/lang/: CMakeLists.txt  lang.h
tag-highlight/src/lang/clang/: clang.c  clang.h  index.c  intern.h  typeid.c  util.c
tag-highlight/src/lang/ctags_scan/: scan.c  scan.h  strip.c  tok.c
tag-highlight/src/lang/golang/: CMakeLists.txt  golang.c  golang.h  pipe.c  sock.c
tag-highlight/src/lang/golang/go_src/: go.mod  main.go  pipe.go  sock.go  sock.go.bak  util.go
tag-highlight/src/mpack/: data.c  decode.c  encode.c  intern.h  mpack.c  mpack.h  print.c
tag-highlight/src/nvim_api/: api.c  api.h  common.c  intern.h  misc.c
tag-highlight/src/util/: archive.h  archive_lzma.c  archive_read.c  archive_write.c  cxx_utils.cc  err.c  find.c  format_binary.c  generic_list.c  initializer_hack.h  linked_list.c  list.h  nanosleep.c  temp_name.c  util.c  util.h
tag_highlight/: CMakeLists.txt  cmake-config.h.in
tag_highlight/cmake/: FindLibBSD.cmake  FindLibClang.cmake  FindLibEv.cmake  FindTalloc.cmake  get_compiler_include_paths.cmake
tag_highlight/src/: CMakeLists.txt  Common.h  api.c  api.h  buf_data.c  bufdata.c  buffer.c  ctags.c  data.c  data.h  event_autocmd.c  event_handlers.c  event_loop.c  events.c  events.h  generic_list.c  generic_list.h  globals.c  highlight.h  json.c  linked_list.c  linked_list.h  loop.c  main.c  message_autocmd.c  mingw_config.h  mpack.c  mpack.h  mpack_code.h  mpack_decode.c  mpack_encode.c  mpack_print.c  my_p99_common.h  new_data.h  parse.c  regex.c  scan_headers.c  tag_highlight.h  update.c  update_commands.c  (+2 more)
tag_highlight/src/archive/: CMakeLists.txt  archive_util.h  archive_util_gzip.c  archive_util_xz.c  readfile.c  writefile.c
tag_highlight/src/bstring/: CMakeLists.txt  additions.c  additions.h  b_list.c  b_stream.c  bstring.h  bstrlib.c  bstrlib.h  char_fields.c  defines.h  private.h  unused.h
tag_highlight/src/clang/: cl2.c  clang.c  clang.h  clang_intern.h  const.c  index.c  intern.h  libclang.h  my_p99_common.h  threaded.c  typeid.c  typeswitch.c  util.c
tag_highlight/src/contrib/: CMakeLists.txt  contrib.c  contrib.h
tag_highlight/src/contrib/bstring/: additions.c  additions.h  b_list.c  bstring.h  bstrlib.c  defines.h  private.h
tag_highlight/src/lang/: common.c  common.h  lang.c  lang.h
tag_highlight/src/lang/clang/: clang.c  clang.h  const.c  index.c  intern.h  threaded.c  typeid.c  util.c
tag_highlight/src/lang/ctags_scan/: scan.c  scan.h  strip.c  tok.c
tag_highlight/src/lang/golang/: go.c  golang.c  main.go  new.go
tag_highlight/src/lang/golang/go_src/: go.mod  main.go
tag_highlight/src/libclang/: clang.c  libclang.h  libclang_intern.h  order2clang.c  tst.c  typeswitch.c
tag_highlight/src/modified_neotags/: CMakeLists.txt  neotags.c  strip.c
tag_highlight/src/mpack/: data.c  decode.c  encode.c  intern.h  mpack.c  mpack.h  print.c
tag_highlight/src/nvim_api/: api.c  api.h  common.c  intern.h  misc.c  read.h  wait_node.h
tag_highlight/src/scan_tags/: scan.c  strip.c  tok.c
tag_highlight/src/tagscan/: scan.c  strip.c  tok.c
tag_highlight/src/util/: archive.h  archive_gzip.c  archive_lzma.c  archive_read.c  archive_write.c  find.c  find.h  generic_list.c  generic_list.h  linked_list.c  linked_list.h  list.h  util.c  util.h
